sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value nbr
  nbr = getNombreValeurs()
  ^AlgBubbleSort1:8: error: not found: value nbr
    for (i <- 1 to nbr-1 ){
                   ^